--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"]
 const happy = true
 const finished = false
 const goal = 3
+
+const skillColor = "navy"
+const fontWeight = "bold"
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -22,6 +26,18 @@ const goal = 3
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: bold;
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Home</a>
@@ -49,7 +65,7 @@ const goal = 3
       </li>
       {
         identity.hobbies.length >= 2 && (
-          <li>
+          <li class="skill">
             Two of my hobbies are: {identity.hobbies[0]} and{" "}
             {identity.hobbies[1]}
           </li>
