--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
-import Navigation from '../components/Navigation.astro';
-import '../styles/global.css';
+import Navigation from "../components/Navigation.astro"
+import Footer from "../components/Footer.astro"
+import "../styles/global.css"
 
 const pageTitle = "About Me"
 
@@ -44,20 +45,16 @@ const textCase = "uppercase"
   </head>
   <body>
     <Navigation />
-
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
-
     <p>
       I am working through Astro's introductory tutorial. This is the second
       page on my website, and it's the first one I built myself!
     </p>
-
     <p>
       This site will update as I complete more of the tutorial, so keep checking
       back and see how my journey is going!
     </p>
-
     <p>Here are a few facts about me:</p>
     <ul>
       <li>My name is {identity.firstName}.</li>
@@ -77,11 +74,8 @@ const textCase = "uppercase"
     <ul>
       {skills.map((skill) => <li>{skill}</li>)}
     </ul>
-
     {happy && <p>I am happy to be learning Astro!</p>}
-
     {finished && <p>I finished this tutorial!</p>}
-
     {
       goal === 3 ? (
         <p>My goal is to finish in 3 days.</p>
@@ -89,5 +83,6 @@ const textCase = "uppercase"
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
   </body>
 </html>
