--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
-import Social from "./Social.astro"
+import Social from './Social.astro'
 ---
+
 <style>
   footer {
     display: flex;
@@ -10,6 +11,6 @@ import Social from "./Social.astro"
 </style>
 
 <footer>
-  <Social platform="github" username="ethansalonga" />
-  <Social platform="linkedin" username="ethan-salonga" />
+  <Social platform='github' username='ethansalonga' />
+  <Social platform='linkedin' username='ethan-salonga' />
 </footer>
