--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,6 +1,7 @@
 ---
 const { platform, username } = Astro.props
 ---
+
 <style>
   a {
     padding: 0.5rem 1rem;
@@ -11,7 +12,7 @@ const { platform, username } = Astro.props
 </style>
 
 {
-  platform === "linkedin" ? (
+  platform === 'linkedin' ? (
     <a href={`https://www.${platform}.com/in/${username}`}>{platform}</a>
   ) : (
     <a href={`https://www.${platform}.com/${username}`}>{platform}</a>
