--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,12 +4,13 @@ import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 const { pageTitle } = Astro.props
 ---
-<html lang="en">
+
+<html lang='en'>
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
+    <meta charset='utf-8' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
   <body>
@@ -18,7 +19,7 @@ const { pageTitle } = Astro.props
     <slot />
     <Footer />
     <script>
-      import "../scripts/menu.js"
+      import '../scripts/menu.js'
     </script>
   </body>
 </html>
